# yuki

./: .gitignore  Cargo.toml  LICENSE  readme.md  renovate.json
.github/workflows/: rust.yml
LICENSES/: gfx-rs  pbrt4
bench/: Cargo.toml
bench/src/: main.rs
blender_utils/: __init__.py
pbrt_blender/: __init__.py  export.py
res/tiling_58-1K/: source.txt
src/: helpers.rs  lib.rs  vector.rs
tests/: Cargo.toml
tests/src/: bounds.rs  lib.rs  matrix.rs  normal.rs  point.rs  ray.rs  transform.rs  vector.rs
yuki/: Cargo.toml
yuki/src/: bounds.rs  bvh.rs  camera.rs  common.rs  film.rs  helpers.rs  hit.rs  interaction.rs  lib.rs  macros.rs  main.rs  matrix.rs  normal.rs  point.rs  point_light.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  transform.rs  ui.rs  vector.rs  visibility.rs  window.rs
yuki/src/app/: defines.rs  headless.rs  mod.rs  ui.rs  util.rs  window.rs
yuki/src/app/renderpasses/: bvh_visualization.rs  mod.rs  ray_visualization.rs  scale_output.rs  tonemap.rs
yuki/src/integrators/: base.rs  bvh_heatmap.rs  geometry_normals.rs  mod.rs  normals.rs  path.rs  shading_normals.rs  shading_uvs.rs  whitted.rs
yuki/src/lights/: distant_light.rs  light.rs  mod.rs  point_light.rs  rectangular_light.rs  spot_light.rs
yuki/src/materials/: glass.rs  glossy.rs  matte.rs  metal.rs  mod.rs
yuki/src/materials/bsdfs/: fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  specular.rs  trowbridge_reitz.rs
yuki/src/math/: bounds.rs  common.rs  matrix.rs  mod.rs  normal.rs  point.rs  ray.rs  spectrum.rs  transform.rs  transforms.rs  vector.rs
yuki/src/renderer/: mod.rs  render_manager.rs  render_worker.rs
yuki/src/samplers/: mod.rs  stratified.rs
yuki/src/sampling/: mod.rs  stratified.rs  uniform.rs
yuki/src/scene/: mod.rs  ply.rs
yuki/src/scene/mitsuba/: common.rs  emitter.rs  macros.rs  material.rs  mod.rs  sensor.rs  shape.rs  transform.rs
yuki/src/scene/pbrt/: cie.rs  lexer.rs  mod.rs  param_set.rs
yuki/src/shapes/: mesh.rs  mod.rs  shape.rs  sphere.rs  triangle.rs
yuki/src/textures/: constant.rs  image_texture.rs  mod.rs
yuki_common/: Cargo.toml
yuki_common/src/: lib.rs
yuki_derive/: Cargo.toml
yuki_derive/src/: common.rs  derive_math_op.rs  derive_trait.rs  derive_vec_op.rs  impl_bounds.rs  impl_normal.rs  impl_point.rs  impl_spectrum.rs  impl_vec.rs  impl_vec_like.rs  impl_vec_op.rs  lib.rs  math_op.rs  vec_op_common.rs
