[package]
name = "tests"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4"
yuki = { path = "../yuki" }
yuki_derive = { path = "../yuki_derive" }
num = "0.3"
