[package]
name = "yuki"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4"
chrono = "0.4"
fern = "0.6"
gfx = "0.18"
gfx_device_gl = "0.16"
glutin = "0.26"
imgui = "0.6.1"
imgui-gfx-renderer = "0.6.1"
imgui-winit-support = "0.6.1"
itertools = "0.10"
log = "0.4"
num = "0.3"
num_enum = "0.5"
num_cpus = "1.13"
old_school_gfx_glutin_ext = "0.26"
rand = "0.8"
rand_pcg = "0.3"
ply-rs = "0.1"
strum = { version = "0.20", features = ["derive"] }
tinyfiledialogs = "3.3"
win_dbg_logger = "0.1"
xml-rs = "0.8"
yuki_derive = { path = "../yuki_derive" }
