[package]
name = "yuki"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
approx = "0.5"
chrono = "0.4"
exr = "1.3"
fern = "0.6"
glium = "0.29"
glutin = "0.26"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
itertools = "0.10"
log = "0.4"
num = "0.4"
num_cpus = "1.13"
msgbox = "0.6"
old_school_gfx_glutin_ext = "0.27"
rand = "0.8"
rand_pcg = "0.3"
pico-args = "0.4"
ply-rs = "0.1"
strum = { version = "0.21", features = ["derive"] }
tinyfiledialogs = "3.8"
win_dbg_logger = "0.1"
xml-rs = "0.8"
yuki_derive = { path = "../yuki_derive" }
