[package]
name = "yuki"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@iki.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
approx = "0.5"
allocators = { git = "https://github.com/sndels/allocators-rs", rev = "01460ef" }
bitflags = "2.3"
chrono = "0.4"
exr = "1.6"
fern = "0.6"
glium = "0.32.1"
image = "0.24.6"
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "5fa0f27" }
# Depends on glium internally, has to match ours
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs", rev = "5fa0f27" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", rev = "5fa0f27" }
itertools = "0.10"
log = "0.4"
num = "0.4"
num_cpus = "1.15"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.7"
ply-rs = { git = "https://github.com/sndels/ply-rs.git", rev = "7a4f625" }
serde = "1.0"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
superluminal-perf = "0.3.0"
tinyfiledialogs = "3.9"
win_dbg_logger = "0.1"
xml-rs = "0.8"
yuki_derive = { path = "../yuki_derive" }
