[package]
name = "yuki_derive"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
yuki_common= { path = "../yuki_common" }

[lib]
proc-macro = true
